--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   </head>
   <body>
     <div id="container">
+
+
       <h1>Wildcard Mask Game</h1>
       <label for="answer-input">What is the wildcard mask of:</label>
       <div id="subnet-mask-label"></div>
-
       <div class="card">
         <h2 id="subnet-mask-label"></h2>
         <form id="subnet-form">
@@ -19,6 +20,7 @@
           <button type="button" id="next-button" style="display:none">Next</button>
         </form>
         <div id="explanation"></div>
+        <div id="result-message"></div>
       </div>
 
       <div id="score">Score: 0</div>
