--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <div id="container">
-
-
       <h1>Wildcard Mask Game</h1>
       <label for="answer-input">What is the wildcard mask of:</label>
       <div id="subnet-mask-label"></div>
@@ -22,9 +20,10 @@
         <div id="explanation"></div>
         <div id="result-message"></div>
       </div>
-
       <div id="score">Score: 0</div>
     </div>
     <script src="app.js"></script>
+
+    <p>Check out <a href="https://www.davidinfosec.com">DavidInfosec.com</a>, a blog all about Information Security and Technology!</p>
   </body>
 </html>
