--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Wildcard Mask Game</title>
     <link rel="stylesheet" href="style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=no">
+
   </head>
   <body>
     <div id="container">
@@ -21,9 +23,10 @@
         <div id="result-message"></div>
       </div>
       <div id="score">Score: 0</div>
+      <div id="davidinfosec">
+        <p>Check out <a href="https://www.davidinfosec.com"><strong>DavidInfosec.com</strong></a>, a blog all about Information Security and Technology!</p>
+      </div>
     </div>
     <script src="app.js"></script>
-
-    <p>Check out <a href="https://www.davidinfosec.com">DavidInfosec.com</a>, a blog all about Information Security and Technology!</p>
   </body>
 </html>
